<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_10sdp"
    android:scrollbars="none"
    tools:context=".activities.flashScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_320sdp"
            android:contentDescription="@string/sczlogoimage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/brandfirstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_64sdp"
            android:text="@string/supercruze"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="@dimen/_28ssp"
            android:textStyle="bold|italic"

            />

        <TextView
            android:id="@+id/brandlastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_45sdp"
            android:text="@string/technologies"
            android:textColor="#E5DFDF"
            android:textSize="@dimen/_28ssp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brandfirstname" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="@+id/brandlastname"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </LinearLayout>
</ScrollView>